--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 
 body{
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Itim','Indie Flower', cursive;
   font-size: 1.875em; /* 30px/16=1.875em */
 }
